@@ -259,7 +259,7 @@ $("<b>#your_table_id</b>").treetable();
         <dt><tt>expandNode(id)</tt></dt>
         <dd>Expand all nodes at once.</dd>
         <dt><tt>loadBranch(node, rows)</tt></dt>
-        <dd>Load additional rows (HTML <tt>&lt;tr&gt;</tt>s) into the tree, with parent <tt>node</tt>.</dd>
+        <dd>Load additional rows (HTML <tt>&lt;tr&gt;</tt>s) into the tree, with parent <tt>node</tt>. If <tt>node</tt> is <tt>null</tt> rows will be added as root nodes.</dd>
         <dt><tt>move(nodeId, destinationId)</tt></dt>
         <dd>Move node <tt>nodeId</tt> to new parent with <tt>destinationId</tt>.</dd>
         <dt><tt>node(id)</tt></dt>
