@@ -418,7 +418,9 @@
 
     loadBranch: function(node, rows) {
       rows = $(rows);
-      if (node.children.length > 0) {
+      if (node == null) { // Inserting new root nodes
+        this.append(rows);
+      } else if (node.children.length > 0) {
         rows.insertAfter(node.children[node.children.length-1].row);
       } else {
         rows.insertAfter(node.row);
